# aoc_rust

./: .aocr.toml  .gitignore  Cargo.toml
.cargo/: config.toml
aoc_2015/: Cargo.toml
aoc_2024/: Cargo.toml
aocr/: Cargo.toml
aocr/src/: runner.rs
aocr_cli/: Cargo.toml
aocr_cli/src/: config.rs  main.rs
aocr_macro/: Cargo.toml
aocr_macro/src/: lib.rs
aocr_template/day/: main.rs  solutions.rs
aocr_template/year/: Cargo.toml
