[workspace]
members = ["aoc_*", "aocr", "aocr_cli", "aocr_macro"]
default-members = ["aocr_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.94"
assert_cmd = "2.0.16"
clap = "4.5.23"
clipboard = "0.5.0"
colored = "2.1.0"
ctor = "0.2.9"
glam = "0.29.2"
itertools = "0.13.0"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
miette = { version = "7.4", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
rayon = "1.10.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
thiserror = "2.0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
