[package]
name = "aocr"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
clipboard.workspace = true
colored.workspace = true
ctor.workspace = true
lazy_static = "1.5.0"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
